// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CashinInSuccess renders correctly with a provider 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#F8F9F9",
            "borderColor": "#E6E6E6",
            "borderRadius": 16,
            "borderWidth": 1,
            "elevation": 12,
            "marginHorizontal": 8,
            "marginVertical": 8,
            "padding": 32,
            "shadowColor": "rgba(156, 164, 169, 0.4)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 12,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 60,
                "height": 120,
                "justifyContent": "center",
                "marginBottom": 24,
                "width": 120,
              },
              {
                "backgroundColor": "#F1FDF1",
              },
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              {
                "testUri": "../../../src/images/assets/fiat-exchange.png",
              }
            }
            style={
              {
                "height": 100,
                "width": 100,
              }
            }
          />
        </View>
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "RedHatDisplayMedium",
              "fontSize": 18,
              "lineHeight": 28,
              "paddingBottom": 16,
              "paddingTop": 8,
              "textAlign": "center",
            }
          }
        >
          cicoSuccess.title
        </Text>
        <Text
          style={
            {
              "color": "#666666",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
              "marginBottom": 32,
              "textAlign": "center",
            }
          }
        >
          cicoSuccess.bodyWithProvider, {"provider":"Moonpay"}
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "paddingBottom": 16,
          "paddingHorizontal": 24,
          "paddingTop": 16,
        },
        {
          "borderTopColor": "#E6E6E6",
          "borderTopWidth": 1,
        },
      ]
    }
  >
    <View
      distance={8}
      offset={
        [
          0,
          4,
        ]
      }
      startColor="rgba(190, 201, 255, 0.28)"
      style={
        {
          "alignSelf": "stretch",
          "borderRadius": 15,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "column",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#2F4ACD",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "height": 48,
                  "justifyContent": "center",
                  "maxHeight": 56,
                  "opacity": 1,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                  "width": "100%",
                },
                undefined,
              ]
            }
            testID="SuccessContinue"
          >
            <View
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <BVLinearGradient
                borderRadii={
                  [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ]
                }
                colors={
                  [
                    -13677875,
                    -15194777,
                  ]
                }
                endPoint={
                  [
                    1,
                    0,
                  ]
                }
                locations={null}
                startPoint={
                  [
                    0,
                    0,
                  ]
                }
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
            <Text
              accessibilityLabel="continue"
              maxFontSizeMultiplier={1}
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "RedHatDisplaySemiBold",
                  "fontSize": 12,
                  "fontWeight": "normal",
                  "lineHeight": 24,
                  "marginLeft": 0,
                  "marginRight": 0,
                }
              }
            >
              continue
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`CashinInSuccess renders correctly without a provider 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#F8F9F9",
            "borderColor": "#E6E6E6",
            "borderRadius": 16,
            "borderWidth": 1,
            "elevation": 12,
            "marginHorizontal": 8,
            "marginVertical": 8,
            "padding": 32,
            "shadowColor": "rgba(156, 164, 169, 0.4)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 12,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 60,
                "height": 120,
                "justifyContent": "center",
                "marginBottom": 24,
                "width": 120,
              },
              {
                "backgroundColor": "#F1FDF1",
              },
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              {
                "testUri": "../../../src/images/assets/fiat-exchange.png",
              }
            }
            style={
              {
                "height": 100,
                "width": 100,
              }
            }
          />
        </View>
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "RedHatDisplayMedium",
              "fontSize": 18,
              "lineHeight": 28,
              "paddingBottom": 16,
              "paddingTop": 8,
              "textAlign": "center",
            }
          }
        >
          cicoSuccess.title
        </Text>
        <Text
          style={
            {
              "color": "#666666",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
              "marginBottom": 32,
              "textAlign": "center",
            }
          }
        >
          cicoSuccess.bodyWithoutProvider
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "paddingBottom": 16,
          "paddingHorizontal": 24,
          "paddingTop": 16,
        },
        {
          "borderTopColor": "#E6E6E6",
          "borderTopWidth": 1,
        },
      ]
    }
  >
    <View
      distance={8}
      offset={
        [
          0,
          4,
        ]
      }
      startColor="rgba(190, 201, 255, 0.28)"
      style={
        {
          "alignSelf": "stretch",
          "borderRadius": 15,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "column",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#2F4ACD",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "height": 48,
                  "justifyContent": "center",
                  "maxHeight": 56,
                  "opacity": 1,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                  "width": "100%",
                },
                undefined,
              ]
            }
            testID="SuccessContinue"
          >
            <View
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <BVLinearGradient
                borderRadii={
                  [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ]
                }
                colors={
                  [
                    -13677875,
                    -15194777,
                  ]
                }
                endPoint={
                  [
                    1,
                    0,
                  ]
                }
                locations={null}
                startPoint={
                  [
                    0,
                    0,
                  ]
                }
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
            <Text
              accessibilityLabel="continue"
              maxFontSizeMultiplier={1}
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "RedHatDisplaySemiBold",
                  "fontSize": 12,
                  "fontWeight": "normal",
                  "lineHeight": 24,
                  "marginLeft": 0,
                  "marginRight": 0,
                }
              }
            >
              continue
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
